correcting responsive videos alignment

--- a/_sass/components/_res_img.scss
+++ b/_sass/components/_res_img.scss
@@ -22,6 +22,7 @@
   padding-bottom: 40%; /* Gives it a nice widescreen ratio */
   padding-top: 25px;
   height: 0;
+  margin: 0 auto;
 
   iframe {
     position: absolute;
